# Warehouse-tracker-front-end

./: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
front-end/: db.sqlite3  pyproject.toml
front-end/tracker/: models.py  views.py
front-end/tracker/migrations/: 0001_initial.py
front-end/warehouse/: settings.py  urls.py
tracker/: admin.py  urls.py  views.py
warehouse/: settings.py
